re-doing maildir.cc...

--- a/configure.ac
+++ b/configure.ac
@@ -9,6 +9,7 @@ AC_CONFIG_MACRO_DIR([m4])
 
 AC_PROG_CXX
 AX_CXX_COMPILE_STDCXX_11(noext,mandatory)
+CXXFLAGS="$CXXFLAGS -Wall"
 dnl AC_USE_SYSTEM_EXTENSIONS
 
 PKG_CHECK_MODULES([sqlite3], [sqlite3])
