find default mail location

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,8 +6,8 @@ LDADD = $(BOOST_LDFLAGS) $(BOOST_IOSTREAMS_LIB) $(sqlite3_LIBS)	\
 
 bin_PROGRAMS = muchsync
 
-muchsync_SOURCES = maildir.cc muchsync.cc protocol.cc sqlite.cc	\
-	xapian_sync.cc muchsync.h
+muchsync_SOURCES = fdstream.cc maildir.cc muchsync.cc protocol.cc	\
+	sqlite.cc xapian_sync.cc muchsync.h fdstream.h
 
 CLEANFILES = *~
 maintainer-clean-local:
