--- a/configure.ac
+++ b/configure.ac
@@ -24,8 +24,8 @@ fi
 AC_SUBST(xapian_CPPFLAGS)
 AC_SUBST(xapian_LIBS)
 
-AX_BOOST_BASE
-AX_BOOST_IOSTREAMS
+dnl AX_BOOST_BASE
+dnl AX_BOOST_IOSTREAMS
 
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
