compile with -pthread if we are going to use threads

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,8 +7,8 @@ LDADD = $(BOOST_LDFLAGS) $(BOOST_IOSTREAMS_LIB) $(sqlite3_LIBS)	\
 bin_PROGRAMS = muchsync
 
 muchsync_SOURCES = fdstream.cc infinibuf.cc maildir.cc muchsync.cc	\
-	protocol.cc sqlstmt.cc xapian_sync.cc muchsync.h fdstream.h	\
-	infinibuf.h sqlstmt.h
+	protocol.cc sqlstmt.cc xapian_sync.cc chan.h muchsync.h		\
+	fdstream.h infinibuf.h sqlstmt.h
 
 CLEANFILES = *~
 maintainer-clean-local:
