--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,7 @@ LDADD = $(sqlite3_LIBS)	$(libcrypto_LIBS) $(xapian_LIBS) -lnotmuch
 
 bin_PROGRAMS = muchsync
 
-muchsync_SOURCES = hash.cc infinibuf.cc muchsync.cc notmuch.cc		\
+muchsync_SOURCES = hash.cc infinibuf.cc muchsync.cc notmuch_db.cc	\
 	protocol.cc spawn.cc sqlstmt.cc xapian_sync.cc muchsync.h	\
 	infinibuf.h notmuch_db.h sqlstmt.h
 
