--- a/Makefile.am
+++ b/Makefile.am
@@ -5,8 +5,8 @@ LDADD = $(sqlite3_LIBS)	$(libcrypto_LIBS) $(xapian_LIBS) -lnotmuch
 bin_PROGRAMS = muchsync
 
 muchsync_SOURCES = hash.cc infinibuf.cc muchsync.cc notmuch_db.cc	\
-	protocol.cc spawn.cc sqlstmt.cc xapian_sync.cc muchsync.h	\
-	infinibuf.h notmuch_db.h sqlstmt.h
+	protocol.cc spawn.cc sqlstmt.cc xapian_sync.cc cleanup.h	\
+	muchsync.h infinibuf.h notmuch_db.h sqlstmt.h
 
 CLEANFILES = *~
 maintainer-clean-local:
