--- a/Makefile.am
+++ b/Makefile.am
@@ -5,8 +5,9 @@ LDADD = $(sqlite3_LIBS)	$(libcrypto_LIBS) $(xapian_LIBS) -lnotmuch
 bin_PROGRAMS = muchsync
 
 muchsync_SOURCES = hash.cc infinibuf.cc muchsync.cc notmuch_db.cc	\
-	protocol.cc spawn.cc sqlstmt.cc xapian_sync.cc cleanup.h	\
-	muchsync.h infinibuf.h notmuch_db.h sqlstmt.h
+	protocol.cc spawn.cc sqlstmt.cc sql_db.cc xapian_sync.cc	\
+	cleanup.h muchsync.h infinibuf.h notmuch_db.h sqlstmt.h		\
+	sql_db.h
 
 CLEANFILES = *~
 maintainer-clean-local:
