--- a/Makefile.am
+++ b/Makefile.am
@@ -4,10 +4,10 @@ LDADD = $(sqlite3_LIBS)	$(libcrypto_LIBS) $(xapian_LIBS) -lnotmuch
 
 bin_PROGRAMS = muchsync
 
-muchsync_SOURCES = hash.cc infinibuf.cc muchsync.cc notmuch_db.cc	\
+muchsync_SOURCES = infinibuf.cc misc.cc muchsync.cc notmuch_db.cc	\
 	protocol.cc spawn.cc sqlstmt.cc sql_db.cc xapian_sync.cc	\
-	cleanup.h muchsync.h infinibuf.h notmuch_db.h sqlstmt.h		\
-	sql_db.h
+	cleanup.h misc.h muchsync.h infinibuf.h notmuch_db.h		\
+	sqlstmt.h sql_db.h
 
 CLEANFILES = *~
 maintainer-clean-local:
