place output in out directory

--- a/www/GNUmakefile
+++ b/www/GNUmakefile
@@ -1,22 +1,29 @@
 
-all: index.html muchsync.html logo.png
+all: out/index.html out/muchsync.html out/logo.png out/muchsync.1
 
-CSS = https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css \
-        local.css
+CSS = https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css
 
 PANDOC = pandoc -S -s -t html5 --template=template.html \
 	$(patsubst %, --css=%, $(CSS))
 
 DEPS = template.html GNUmakefile
 
-index.html: index.md $(DEPS)
+out/index.html: index.md $(DEPS)
+	@mkdir -p out
 	$(PANDOC) -Vskiptitle:1 -o $@ $<
 
-muchsync.html: ../muchsync.1.md $(DEPS)
+out/muchsync.html: ../muchsync.1.md $(DEPS)
+	@mkdir -p out
 	$(PANDOC) -o $@ $<
 
-logo.png: logo.svg GNUmakefile
+out/logo.png: logo.svg
+	@mkdir -p out
 	inkscape -e $@ $<
 
+out/muchsync.1: ../muchsync.1.md
+	@mkdir -p out
+	$(MAKE) -C.. muchsync.1
+	cp ../muchsync.1 $@
+
 clean:
-	rm -f *~ index.html muchsync.html
+	rm -f *~ out
